--- a/Calculadora-IMC/src/App.css
+++ b/Calculadora-IMC/src/App.css
@@ -1,10 +1,23 @@
-/* src/App.css */
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
 }
-
+form div {
+  margin-bottom: 15px;
+}
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  
+}
 h1, h2 {
   color: #333;
 }
